# c-mediaplayer

./: .gitignore  CMakeLists.txt  a.out  bk-main.c  c-mediaplayer  compile.sh  gen_digraph.c  main.c  mediaplayer  state_table.h  test.c
graph/: a.out  gen_graph.c  gen_graph.h  main.c  script
include/: event_table.h  state_table.h  update.h  utils.h
src/: gen_digraph.c  main.c  update.c  utils.c
